[WinCairo] Compile error, WebEditorClient::didApplyStyle() should not have any parameters. https://bugs.webkit.org/show_bug.cgi?id=146450

Reviewed by Csaba Osztrogonác.

* WebCoreSupport/WebEditorClient.cpp:
(WebEditorClient::shouldApplyStyle):
(WebEditorClient::didApplyStyle):
* WebCoreSupport/WebEditorClient.h:


Canonical link: https://commits.webkit.org/164544@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@186114 268f45cc-cd09-0410-ab3c-d52691b4dbfc