Source/WebKit/win/WebCoreSupport/WebEditorClient.h
@@ -66,7 +66,7 @@ public:
 
     bool shouldInsertNode(WebCore::Node*, WebCore::Range* replacingRange, WebCore::EditorInsertAction);
     bool shouldApplyStyle(WebCore::StyleProperties*, WebCore::Range*);
-    void didApplyStyle(WebCore::StyleProperties*, WebCore::Range*);
+    void didApplyStyle();
     bool shouldMoveRangeAfterDelete(WebCore::Range*, WebCore::Range*);
     bool shouldChangeTypingStyle(WebCore::StyleProperties* currentStyle, WebCore::StyleProperties* toProposedStyle);
 
